lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:43: error: ')' expected but ',' found.
  		if (getVitesseX() >= 4,5) {
                                      ^Lander:46: error: ';' expected but ',' found.
  		else if (getVitesseX() <= -4,5) {
                                            ^